Fix narrow align-right; force village plan pages to use content-narrow

--- a/css/pellucid.css
+++ b/css/pellucid.css
@@ -1,25 +1,29 @@
-@media (min-width: 62.5rem) {
-
-[dir="ltr"] .layout--content-narrow .align-right,
-[dir="ltr"] .layout--pass--content-narrow > * .align-right {
-    margin-right: 0 !important;
-  }
-
-  [dir="ltr"] .layout--content-narrow .align-left,
-  [dir="ltr"] .layout--pass--content-narrow > * .align-left {
-    margin-left: 0 !important;
-  }
-}
-
 .view-frontpage-news-items .media--type-image {
 	float: left;
 	margin-right: 1rem;
 }
 
-footer.site-footer div.text-content a,
-main div.text-content a, [dir] main div.text-content a {
-  box-shadow: inset 0 -1px 0 0 #0d77b5;
+/* BEGIN - fix /core/themes/olivero/css/components/embedded-media.css */
+/* Pull out of grid if nested in content narrow layout. */
+@media (min-width: 43.75rem) {
+
+[dir="ltr"] .layout--content-narrow .align-right,
+[dir="ltr"] .layout--pass--content-narrow > * .align-right {
+	margin-right: -3rem !important;
+  }
 }
+
+@media (min-width: 62.5rem) {
+
+[dir="ltr"] .layout--content-narrow .align-right,
+[dir="ltr"] .layout--pass--content-narrow > * .align-right {
+	margin-right: -6rem !important;
+  }
+}
+/* END - fix /core/themes/olivero/css/components/embedded-media.css */
+
+
+/* BEGIN - Photo "gallery" page */
 
 div.field--name-field-photo > .field__label {
   display: none;
@@ -35,3 +39,5 @@ div.field--name-field-photo .field__items {
   grid-gap: 10px;
   grid-auto-flow: dense;
 }
+
+/* END -Photo "gallery" page */
